[gd_scene load_steps=6 format=3 uid="uid://b2w8psh5gq154"]

[ext_resource type="Script" uid="uid://di5d8xxejhia3" path="res://gui.gd" id="1_6lon5"]
[ext_resource type="Texture2D" uid="uid://ccd7ve7wxyrek" path="res://images/heart.png" id="1_80edf"]
[ext_resource type="PackedScene" uid="uid://cst22lggim4xx" path="res://heartanimations.tscn" id="3_q8o8l"]
[ext_resource type="PackedScene" uid="uid://cutx7hnrlyh26" path="res://rich_text_label.tscn" id="4_cor1f"]
[ext_resource type="Script" uid="uid://b55tyf7efx4n7" path="res://rich_text_label_3.gd" id="5_u77ya"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_6lon5")

[node name="Heart1" type="Sprite2D" parent="."]
position = Vector2(61, 588)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_80edf")

[node name="Heart2" type="Sprite2D" parent="."]
position = Vector2(151, 588)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_80edf")

[node name="Heart3" type="Sprite2D" parent="."]
position = Vector2(241, 588)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_80edf")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 307.0
offset_top = 554.0
offset_right = 736.0
offset_bottom = 633.0

[node name="Heartanimation3" parent="." instance=ExtResource("3_q8o8l")]
position = Vector2(241, 588)

[node name="Heartanimation2" parent="." instance=ExtResource("3_q8o8l")]
position = Vector2(151, 588)

[node name="Heartanimation1" parent="." instance=ExtResource("3_q8o8l")]
position = Vector2(61, 587)

[node name="RichTextLabel2" parent="." instance=ExtResource("4_cor1f")]
offset_left = 300.0
offset_top = 592.0
offset_right = 658.0
offset_bottom = 632.0

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
offset_left = 300.0
offset_top = 553.0
offset_right = 400.0
offset_bottom = 593.0
theme_override_font_sizes/normal_font_size = 32
script = ExtResource("5_u77ya")
